[package]
name = "rustcalc"
version = "0.1.0"
authors = ["Raghav Shankar <warpspeedscp@gmail.com>"]

[dependencies]
termion = "*"
scribe = "*"
fst = "*"
fst-regex = "*"
lazy_static = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
node_t-derive = {path = "node_t-derive"}
terminal-node-derive = {path = "terminal-node-derive"}
encapsulating-node-derive = {path = "encapsulating-node-derive"}
ordered-float = "1.0.1"

[features]
debug = []